[gd_scene load_steps=3 format=2]

[ext_resource path="res://Julian/Fairy/FirePillar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Julian/Fairy/FireRing.gd" type="Script" id=2]

[node name="FireRing" type="Node2D"]
script = ExtResource( 2 )

[node name="FirePillar1" parent="." instance=ExtResource( 1 )]
position = Vector2( -30, 0 )

[node name="FirePillar2" parent="." instance=ExtResource( 1 )]
position = Vector2( -15, 0 )

[node name="FirePillar3" parent="." instance=ExtResource( 1 )]

[node name="FirePillar4" parent="." instance=ExtResource( 1 )]
position = Vector2( 15, 0 )

[node name="FirePillar5" parent="." instance=ExtResource( 1 )]
position = Vector2( 30, 0 )

[node name="AppearTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="AppearTimer" to="." method="_on_AppearTimer_timeout"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
